recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:20: error: not found: value lenght
		squareSide(levels-1,lenght);
                                    ^